refactoring for a more modern design

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    /* Green and Red */
-    --primary-color: #2ecc71; /* Main color for headers, links, etc. */
-    --complementary-color: #e74c3c; /* Complementary color for accents, buttons, etc. */
-  
+  /* Define global variables in :root */
+  --primary-color: #007BFF;      /* Use for primary elements like text and buttons */
+  --secondary-color: #55D8FE;    /* Use for secondary elements like backgrounds */
+  --accent-color: #FFFFFF;       /* Use for accent elements like highlights or borders */
 }
 
 * {
@@ -13,56 +13,53 @@
 
 .nav-bar {
   width: 100vw;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   padding: 2rem;
 }
 
 ul {
   list-style-type: none;
   display: flex;
-  justify-content:space-evenly;
-  
-    
+  justify-content: space-evenly;
 }
 
 li {
-    display: flex;
-    justify-self: flex-end;
+  display: flex;
+  justify-self: flex-end;
 }
 
 button {
   background: none;
   border: none;
-  background-color: var(--complementary-color);
+  background-color: var(--accent-color);
   padding: 10px;
   border-radius: 5px;
 }
 
-.avatar{
-    width: 200px;
-    height: auto;
-    border-radius: 50%;
+.avatar {
+  width: 200px;
+  height: auto;
+  border-radius: 50%;
 }
 
-.img-center{
-    margin: 2em;
-    display: flex;
-    justify-content: center;
-    max-width: 100%;
-    max-width: 100%;
+.img-center {
+  margin: 2em;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  max-width: 100%;
 }
 
-.main{
-   
+.main {}
+
+.welcome h2 {
+  text-align: center;
+  font-size: 32px;
+  padding-bottom: 1em;
+  color: var(--primary-color);
 }
 
-.welcome h2{
-    text-align: center;
-    font-size: 32px;
-    padding-bottom: 1em;
-    color: var(--primary-color);
-}
-.welcome p{
-    padding: 5px;
-    margin: 5px;
+.welcome p {
+  padding: 5px;
+  margin: 5px;
 }
