--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@
 .nav-bar {
   width: 100vw;
   padding: 2rem;
-  border: 1px solid var(--primary-color);
-  box-shadow: 1px 2px 3px 2px var(--secondary-color);
+
 }
 
 ul {
@@ -28,6 +27,16 @@ li {
   display: flex;
   justify-self: flex-end;
   margin-left: 10px;
+  width: 70px;
+  padding: 10px 10px;
+  border-radius: 5px;
+}
+
+li:hover{
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: var(--accent-color);
+
 }
 
 
@@ -46,16 +55,14 @@ li {
   max-width: 100%;
 }
 
-.main {}
-
-.welcome h2 {
+.stack h2{
   text-align: center;
-  font-size: 32px;
-  padding-bottom: 1em;
-  color: var(--primary-color);
+  font-size: 2em;
 }
 
-.welcome p {
-  padding: 5px;
-  margin: 5px;
+
+@media only screen and (max-width:767px) and (min-device-width:320px) and (max-device-width:480px) {
+  .stack h2{
+    font-size: 1.5em;
+  }
 }
