--- a/style.css
+++ b/style.css
@@ -55,9 +55,21 @@ li:hover{
   max-width: 100%;
 }
 
+.stack{
+  border: 2px solid var(--accent-color);
+  box-shadow: 2px 2px 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 2px 10px;
+}
+
 .stack h2{
   text-align: center;
   font-size: 2em;
+}
+.stack p{
+  text-align: center;
+  font-size: 1em;
+ margin-left: 10%;
+ margin-right: 10%;
 }
 
 
